# quickdb

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-08-stub-generator.md
docs/superpowers/specs/: 2026-05-08-stub-generator-design.md
src/quickdb/: __init__.py
src/quickdb/core/: __init__.py  database.py  query_mgr.py  server.py  table.py  utils.py
src/quickdb/scripts/: stub_generator.py
tests/: test_server_database.py  test_stub_generator.py
