[project]
name = "quickdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rob Botham", email = "r.a.botham@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.2.3",
    "pymssql>=2.3.13",
    "pymysql>=1.1.3",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true } }]

[tool.ruff]
line-length = 100
target-version = 'py314'
lint.select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true
